2005-09-07  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus-sum.el (gnus-thread-sort-by-recipient): New function to
	make `gnus-summary-sort-by-recipient' work with threading.

	* nnweb.el (nnweb-google-wash-article): Print a message if article
	is not available.

2005-09-07  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* gnus-art.el (gnus-mime-display-single): Revert 2004-10-07
	change.  Decode text/* parts content before displaying.

2005-09-06  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mm-view.el (mm-display-inline-fontify): Disable support modes.

	* lpath.el: Don't bind mc-pgp-always-sign, url-current-object,
	url-package-name, url-package-version,
	w3m-cid-retrieve-function-alist, w3m-current-buffer,
	w3m-display-inline-images, and w3m-minor-mode-map.

2005-09-05  Reiner Steib  <Reiner.Steib@gmx.de>

	* message.el (message-tab-body-function): Fixed mismatched custom
	type.

	* gnus.el (gnus-group-change-level-function): Ditto.

	* gnus-msg.el (gnus-outgoing-message-group): Ditto.

	* gnus-art.el (gnus-signature-limit)
	(gnus-article-mime-part-function): Ditto.

2005-09-05  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mml.el (mml-mode): Silence the byte compiler.

	* gnus-art.el (gnus-article-jump-to-part): Redisplay the article
	using `(sit-for 0)' before moving the point to the specified part;
	skip unbuttonized parts.
	(gnus-article-part-wrapper): Don't use save-window-excursion; don't
	return to the summary window if gnus-auto-select-part is non-nil.

2005-09-04  Reiner Steib  <Reiner.Steib@gmx.de>

	* mml.el (mml-dnd-protocol-alist, mml-dnd-attach-options): New
	variables.
	(mml-dnd-attach-file, mml-mode): Use them.

	* nnweb.el (nnweb-type-definition, nnweb-google-wash-article):
	Make fetching article by MID work again for Google Groups.  Added
	FIXME concerning gnus-group-make-web-group.

	* mml-smime.el (mml-smime-sign-query, mml-smime-get-dns-cert):
	Don't depend on Gnus by using mail-extract-address-components if
	gnus-extract-address-components is not bound.
