@@ -1,5 +1,10 @@
 2005-09-07  Reiner Steib  <Reiner.Steib@gmx.de>
 
+	* spam-report.el (spam-report-gmane): Make it work without
+	X-Report-Spam header.  Gmane now only provides Archived-At.  This
+	is only used if `spam-report-gmane-use-article-number' is nil.
+	(spam-report-gmane-spam-header): Removed.  Not used anymore.
+
 	* gnus-sum.el (gnus-thread-sort-by-recipient): New function to
 	make `gnus-summary-sort-by-recipient' work with threading.
 
@@ -10,6 +15,10 @@
 
 	* gnus-art.el (gnus-mime-display-single): Revert 2004-10-07
 	change.  Decode text/* parts content before displaying.
+
+2005-09-06  Reiner Steib  <Reiner.Steib@gmx.de>
+
+	* mml-smime.el: Remove defvar of gnus-extract-address-components.
 
 2005-09-06  Katsumi Yamaoka  <yamaoka@jpl.org>
 
